Fix erreurs de contraste

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -56,7 +56,7 @@
     font-size: 2em;
     padding: 1em;
   }
-  h3 {
+  h2 {
     font-family: $font-headings;
     font-size: 2em;
   }
