--- a/src/app/components/movies-list/movies-list.component.scss
+++ b/src/app/components/movies-list/movies-list.component.scss
@@ -59,12 +59,12 @@
       }
       &--title {
         margin-bottom: 0;
-        color: $color-headings;
+        color: $color-text;
       }
       &--year {
         margin: 0;
         font-style: italic;
-        color: lighten($color-headings, 20%);
+        color: $color-text;
       }
       &--figcaption {
         position: relative;
@@ -98,15 +98,19 @@
     }
     li {
       margin: 0 0.3em;
-      color: $color-headings;
+      color: $color-text;
       &:hover {
         text-decoration: underline;
       }
     }
     .currentPage {
-      color: darken($color-headings, 30%);
-      text-decoration: underline;
+      color: $color-text;
       font-size: 1.3em;
+      border-bottom: 1px solid $color-text;
+      border-top: 1px solid $color-text;
+      &:hover {
+        text-decoration: none;
+      }
     }
   }
   
