--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,7 +1,7 @@
 // Colors
 $color-bg: #424242ff;
 $color-bg-transparent: #424242dd;
-$color-text: lighten(#97a7b3ff, 30%);
+$color-text: #fff;
 $color-headings: #f4d35eff;
 $color-secondary: #b07156ff;
 $color-success: #69a297ff;
